# AgniRakhsa-FireDetection

./: .gitignore  .impeccable.md  README.md  docker-compose.yml  requirements.txt
.sonarlint/: connectedMode.json
IFRIT/: compile_commands.json  diagram.json  platformio.ini  wokwi.toml
backend/: .env.example  Dockerfile  out.txt  pyproject.toml  test_send.py
backend/app/: main.py
backend/app/ai/: __init__.py  base.py  label_encoder.pkl  registry.py  schemas.py  tokenizer.pkl
backend/app/ai/iot_sensor/: __init__.py  detector.py  isolation_forest_model.pkl  model_test.py  scaler.pkl  training_script.py
backend/app/ai/yolo/: __init__.py  detector.py
backend/app/api/: deps.py  ws_manager.py
backend/app/api/routers/: __init__.py  alerts.py  auth.py  calibration.py  camera_stream.py  cameras.py  contacts.py  dashboard.py  detection.py  devices.py  nlp_routes.py  notifications.py  rooms.py  sensors.py  ws.py
backend/app/core/: config.py  security.py
backend/app/schemas/: __init__.py  alert.py  calibration.py  contact.py  detection.py  device.py  room.py  sensor.py  user.py
backend/app/services/: detection_service.py  device_watchdog.py  fusion_service.py  nlp_service.py  sensor_service.py  whatsapp.py
backend/scripts/: data_pipeline.py  mock_sensor_data.py  seeder.py  test_nlp_prediction.py  train_model.py  webcam_stream.py
landing/: index.html  package-lock.json  package.json
training/: TUNING_GUIDE.md  train_fire_yolov8.py
web/: .gitignore  .impeccable.md  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
(+92 files in other folders)
